--- a/csharp-playground/csharp-playground.csproj
+++ b/csharp-playground/csharp-playground.csproj
@@ -44,8 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContinueKeyword.cs" />
+    <Compile Include="Params.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueT.cs" />
+    <Compile Include="TupleT.cs" />
+    <Compile Include="TypeOf.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
